--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,32 @@ venv.bak/
 
 # Logs
 *.log
+
+
+
+
+# Flutter generated files
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.dart_tool/
+.pub-cache/
+
+# Build results
+build/
+app/build/
+
+# IDE-specific files
+.idea/
+.vscode/
+*.iml
+*.ipr
+
+# Other
+*.log
+*.lock
+
+# Sensitive information - add your own files here
+# For example:
+# secrets.json
+# .env
